atualização de codigo

--- a/index.html
+++ b/index.html
@@ -12,20 +12,73 @@
                     <img src="./assets/logoppd.jpeg" alt="Logo do site Ponto de Partida Dev.">
                 </figure>
                 <!--introdução sobre o site-->
-            <p>“Ponto de Partida Dev” é um site desenvolvido com o objetivo de ajudar pessoas que desejam iniciar sua jornada no universo da programação, especialmente calouros de cursos da área de T.I . O site reúne conteúdos introdutórios, dicas práticas, trilhas de aprendizagem e recursos gratuitos para facilitar o início da caminhada na área da tecnologia.</p>
+            <p><b>Ponto de Partida Dev</b> é um site desenvolvido com o objetivo de ajudar pessoas que desejam iniciar sua jornada no universo da programação, especialmente calouros de cursos da área de T.I . O site reúne conteúdos introdutórios, dicas práticas, trilhas de aprendizagem e recursos gratuitos para facilitar o início da caminhada na área da tecnologia.</p>
             <p>No site você vai encontrar vários conteudos como video-aulas, cursos e etc. Para ajudar você que quer iniciar no mundo da programação.</p>
             <p>O nosso objetivo e ajudar os nossos usuários a entender o mamixo possivel dos conteudos disponibilizados.<br> É claro que no caminho haverão dúvidas e vamos deixar meios de contato para que vocês possam tirar suas duvidas caso achem necessário. <br>A plataforma foi pensada para ser acessível, acolhedora e objetiva, proporcionando um ambiente de aprendizado amigável e progressivo.</p>
             <p>E não tenha medo de erra pois "Todo programador já foi iniciante. Comece do zero, e chegue ao código".</p>
         </header>
 
         <main>
-            <h2>Sobre o Site</h2>
-            <!--falar sobre o cónteudo do site-->
+            <section>
+                <h2>Sobre o Site</h2>
+                <!--falar sobre o cónteudo do site-->
+                <p><b>Ponto de Partida Dev</b> surgiu da necessidade real que muitos estudantes e curiosos da área da tecnologia enfrentam: como começar a programar? Essa é uma dúvida comum para quem está dando os primeiros passos no mundo da programação, especialmente para os calouros de cursos como Ciência da Computação, Sistemas de Informação ou até mesmo autodidatas que desejam entrar nesse universo.</p>
+                <p>Sabemos que aprender a programar pode parecer algo distante, técnico e até assustador para quem está começando. Foi justamente pensando nisso que desenvolvemos essa plataforma. Queremos ser o primeiro passo seguro e amigável na jornada de quem quer se tornar um programador.</p>
+                <p>Nosso site reúne diversos recursos pensados para facilitar o aprendizado, como:</p>
+            <section>
+                <h2>Trilhas de Aprendizado</h2>
+                <p>Explore as principais áreas de conhecimento para iniciar sua jornada como desenvolvedor.</p>
+
+                <div class="trilha">
+                    <h3>1. Fundamentos Lógicos e Matemáticos</h3>
+                    <ul>
+                        <li><strong>Lógica de Programação:</strong> Desenvolva o raciocínio computacional e aprenda a construir algoritmos.</li>
+                        <li><strong>Lógica Matemática:</strong> Entenda os princípios de lógica aplicados ao pensamento algorítmico.</li>
+                        <li><strong>Matemática Aplicada:</strong> Conceitos fundamentais da matemática voltados para computação.</li>
+                    </ul>
+                </div>
+
+                <div class="trilha">
+                    <h3>2. Programação para Web e Mobile</h3>
+                    <ul>
+                        <li><strong>Web Coding:</strong> Aprenda a desenvolver sites e aplicações web modernas.</li>
+                        <li><strong>Códigos de Alta Performance – Web:</strong> Técnicas para otimizar seus projetos web.</li>
+                        <li><strong>Mobile Coding:</strong> Inicie no desenvolvimento de aplicativos para celular.</li>
+                        <li><strong>Códigos de Alta Performance – Mobile:</strong> Boas práticas para apps leves, rápidos e eficientes.</li>
+                    </ul>
+                </div>
+
+                <div class="trilha">
+                    <h3>3. Infraestrutura e Sistemas</h3>
+                    <ul>
+                        <li><strong>Redes de Computadores:</strong> Aprenda como dispositivos se conectam e trocam dados.</li>
+                        <li><strong>Sistemas Operacionais:</strong> Conheça os fundamentos dos principais sistemas usados em TI.</li>
+                    </ul>
+                </div>
+
+                <div class="trilha">
+                    <h3>4. Linguagens de Programação</h3>
+                    <ul>
+                        <li><strong>Python:</strong> Simples e poderosa, ideal para quem está começando.</li>
+                        <li><strong>JavaScript:</strong> Dê vida às páginas web com interatividade.</li>
+                        <li><strong>C++:</strong> Aprenda uma linguagem robusta e de alto desempenho.</li>
+                        <li><strong>HTML/CSS:</strong> A base da web — estrutura e estilo para seus projetos.</li>
+                    </ul>
+                </div>
+            </section>
+            <p>Além disso, oferecemos conteúdos atualizados, linguagem acessível e uma navegação intuitiva, para que o usuário não se sinta perdido e possa evoluir no seu próprio ritmo. Valorizamos a experiência do usuário e queremos que ele se sinta acolhido, motivado e, acima de tudo, capaz de aprender.</p>
+            <p>No <b>Ponto de Partida Dev</b>, acreditamos que todo programador tem uma história — e toda história começa com um primeiro passo. Estamos aqui para ser esse passo.</p>
+            </section>
+            <!--Pagina de direcionamento para os cursos -->
+            <section>
+                <a href="FLM.html" target="_blank">
+                    <img src="" alt="">
+                </a>
+            </section>
+        
         </main>
 
-        <footer>
-            
-        </footer>
+        <footer></footer>
 
     </body>
 </html>
