--- a/index.html
+++ b/index.html
@@ -68,14 +68,29 @@
             </section>
             <p>Além disso, oferecemos conteúdos atualizados, linguagem acessível e uma navegação intuitiva, para que o usuário não se sinta perdido e possa evoluir no seu próprio ritmo. Valorizamos a experiência do usuário e queremos que ele se sinta acolhido, motivado e, acima de tudo, capaz de aprender.</p>
             <p>No <b>Ponto de Partida Dev</b>, acreditamos que todo programador tem uma história — e toda história começa com um primeiro passo. Estamos aqui para ser esse passo.</p>
-            </section>
+            </section> 
             <!--Pagina de direcionamento para os cursos -->
             <section>
                 <a href="FLM.html" target="_blank">
-                    <img src="" alt="">
+                    <img src="./assets/FLM.jpeg" alt="imagem de fundamentos lógicos e matemáticas">
                 </a>
             </section>
-        
+            <section>
+                <a href="progwebmob.html" target="_blank">
+                    <img src="./assets/programação web e mobile.jpeg" alt="imagem de programação web e mobile">
+                </a>
+            </section>
+            <section>
+                <a href="sistemas.html" target="_blank">
+                    <img src="./assets/infraestrutura e sistema.jpeg" alt="imagem de infraestrutura e sistemas">
+                </a>
+            </section>
+            <section>
+                <a href="lingprogramação.html" target="_blank">
+                    <img src="./assets/linguagens de programação.jpeg" alt="imagem de linguagens de programação">
+                </a>
+            </section>
+            
         </main>
 
         <footer></footer>
