--- a/lingprogramação.html
+++ b/lingprogramação.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundamentos Lógicos e Matemáticos</title>
+    <title>Linguagens de Programção</title>
 </head>
 <body>
     
