reestruturação basica do site

--- a/FLM.html
+++ b/FLM.html
@@ -6,7 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundamentos Lógicos e Matemáticos</title>
 </head>
+
 <body>
-    
+        <section style="text-align: center;">
+                <figure>
+                    <img src="./assets/FLM(TITLE).jpeg" alt="imagem de fundamentos lógicos e matemáticas" width="500" height="300">
+                </figure>
+
+                <!--Explicão sobre o curso de fundamentos logicos e matemáticas-->                
+                 <p><strong>Dominar os fundamentos lógicos e matemáticos</strong> é essencial para quem está começando na programação. Essa base fortalece o raciocínio lógico, facilita a compreensão de algoritmos e prepara o caminho para resolver problemas de forma estruturada e eficiente.<br></p>
+                 <p><strong>Conteúdos do curso</strong></p>
+                 <li><strong>Lógica de Programação</strong>: Aprenda a pensar como um programador! Aqui você desenvolve o raciocínio computacional e aprende a criar algoritmos passo a passo, compreendendo como máquinas processam instruções.</li>
+                 <li><strong>Lógica Matemática</strong>: Explore os princípios da lógica formal que sustentam o pensamento algorítmico, como proposições, operadores lógicos, tabelas verdade e deduções. Essa parte é crucial para entender estruturas de decisão e controle em código.</li>
+                 <li><strong>Matemática Aplicada</strong>: Estude os conceitos matemáticos mais usados na computação, como conjuntos, funções, relações, álgebra e aritmética. Esses conhecimentos são a base para áreas como ciência de dados, inteligência artificial e desenvolvimento de sistemas.</li>
+                 <p>Com esses pilares bem estruturados, você estará pronto para avançar com <strong> mais segurança </strong> na sua jornada na tecnologia</p>
+                
+
+                <main>
+
+                </main>
+        </section>
 </body>
+
+
 </html>
