--- a/progwebmob.html
+++ b/progwebmob.html
@@ -6,7 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programação para Web e Mobile</title>
 </head>
+     
 <body>
-    
+    <section style="text-align: center;">
+                <figure>
+                    <img src="./assets/pwm(title).png" alt="imagem de programação web e mobile" width="600" height="400">
+                </figure>
+ 
+                <!--Explicão sobre o curso de programação web e mobile-->
+                <p>Este curso aborda os <strong>fundamentos do desenvolvimento para internet e dispositivos móveis</strong>, ensinando desde a criação de sites e aplicações web até a construção de apps otimizados para smartphones.</p>
+                <p>Com foco em performance e boas práticas, você aprenderá a desenvolver projetos eficientes, rápidos e modernos.</p>
+                <p><strong>Conteúdos do curso<strong>:</p>
+                <li><strong>Web Coding</strong>: Criação de sites e sistemas web.</li>
+                <li><strong>Otimização Web</strong>: Técnicas para alta performance na internet.</li>
+                <li><strong>Mobile Coding</strong>: Desenvolvimento de aplicativos para celular.</li>
+                <li><strong>Otimização Mobile</strong>: Práticas para apps leves e rápidos</li>
+                <main>
+
+                </main>
+    </section>
 </body>
 </html>
