--- a/sistemas.html
+++ b/sistemas.html
@@ -6,7 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infraestrutura e Sistemas</title>
 </head>
+
 <body>
-    
+    <section Style="text-align: center;">
+        <figure>
+            <img src="./assets/IS(title).png" alt="imagem de infraestrutura e sistemas" width="600" height="400">
+        </figure>
+
+        <!--Explicão sobre o curso de infraestrutura e sistemas-->
+        <p>Este curso explora os conceitos essenciais de redes e sistemas operacionais, fundamentais para qualquer profissional de TI.<br></p>
+        <p>Você aprenderá como os dispositivos se comunicam em rede e como os sistemas operacionais funcionam, garantindo uma base sólida para administrar ambientes tecnológicos.<br><p>
+        <p><strong>Conteúdos do curso</strong><br></p>
+        <li><strong>Redes de Computadores</strong>: Como dispositivos se conectam e compartilham dados.</li>
+        <li><strong>Sistemas Operacionais</strong>: Fundamentos dos principais sistemas usados na área de TI.</li>
+    </section>
 </body>
 </html>
