--- a/lingprogramação.html
+++ b/lingprogramação.html
@@ -1,28 +1,129 @@
 <!--Página para colocar os cursos--> 
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linguagens de Programção</title>
+    <title>Linguagens de Programação</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background: #f0f8ff;
+            color: #222;
+        }
+        header {
+            background: #4fc3f7;
+            padding: 30px 0 10px 0;
+            text-align: center;
+        }
+        header img {
+            width: 180px;
+            border-radius: 12px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+        }
+        header h1 {
+            margin: 18px 0 10px 0;
+            color: #1976d2;
+            font-size: 2em;
+        }
+        main {
+            max-width: 900px;
+            margin: 30px auto;
+            padding: 0 20px;
+        }
+        section {
+            margin-bottom: 40px;
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 12px rgba(0,0,0,0.06);
+            padding: 30px 0;
+            text-align: center;
+        }
+        section img {
+            width: 350px;
+            max-width: 90vw;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            margin-bottom: 18px;
+        }
+        ul {
+            list-style: disc inside;
+            text-align: left;
+            max-width: 600px;
+            margin: 18px auto 24px auto;
+            padding: 0;
+        }
+        ul li {
+            margin-bottom: 12px;
+            font-size: 1.08em;
+        }
+        h2 {
+            color: #1976d2;
+            margin-bottom: 10px;
+        }
+        p {
+            max-width: 700px;
+            margin: 12px auto;
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
+        footer {
+            background: #1976d2;
+            color: #fff;
+            text-align: center;
+            padding: 18px 0;
+            margin-top: 40px;
+            font-size: 1em;
+            letter-spacing: 1px;
+        }
+        @media (max-width: 700px) {
+            main {
+                padding: 0 5px;
+            }
+            section img {
+                width: 95vw;
+            }
+        }
+    </style>
 </head>
-
 <body>
-    <section style="text-align: center;">
-        <figure>
-            <img src="./assets/LP(title).png" alt="imagem de Linguagem de programação" width="600" height="500">
-        </figure>
-        
-        <!--Explicão sobre o curso de Linguagens de programação-->
-        <p>Este módulo apresenta as <strong> principais linguagens de programação </strong>, desde opções amigáveis para iniciantes até ferramentas poderosas para desenvolvimento avançado.<br></p>
-        <p>Com uma abordagem prática e didática, você <strong> aprenderá </strong> a criar desde páginas web interativas até sistemas de alto desempenho.<br></p>
-        <p><strong>Conteúdos do curso</strong></p>
-        <li><strong>Python</strong>: Linguagem simples e versátil, perfeita para iniciantes.</li>
-        <li><strong>JavaScript</strong>: Adicione interatividade e dinamismo a páginas web.</li>
-        <li><strong>C++</strong>: Domine uma linguagem robusta para projetos de alta performance.</li>
-        <li><strong>HTML/CSS</strong>: A base do desenvolvimento web: estrutura e estilo.</li>
-        
-
-    </section>
+    <header>
+        <img src="./assets/logoppd.jpeg" alt="Logo do site Ponto de Partida Dev.">
+        <h1>Linguagens de Programação</h1>
+    </header>
+    <main>
+        <section>
+            <figure>
+                <img src="./assets/LP(title).png" alt="Imagem de Linguagens de Programação">
+            </figure>
+            <p>
+                Este módulo apresenta as <strong>principais linguagens de programação</strong>, desde opções amigáveis para iniciantes até ferramentas poderosas para desenvolvimento avançado.
+            </p>
+            <p>
+                Com uma abordagem prática e didática, você <strong>aprenderá</strong> a criar desde páginas web interativas até sistemas de alto desempenho.
+            </p>
+            <h2>Conteúdos do Curso</h2>
+            <ul>
+                <li><strong>Python</strong>: Linguagem simples e versátil, perfeita para iniciantes.</li>
+                <li><strong>JavaScript</strong>: Adicione interatividade e dinamismo a páginas web.</li>
+                <li><strong>C++</strong>: Domine uma linguagem robusta para projetos de alta performance.</li>
+                <li><strong>HTML/CSS</strong>: A base do desenvolvimento web: estrutura e estilo.</li>
+            </ul>
+            <p>
+                Com esses conhecimentos, você poderá escolher a linguagem ideal para cada projeto e ampliar suas oportunidades no mundo da tecnologia.
+            </p>
+        </section>
+        <section>
+            <h2>Prática em Linguagens</h2>
+            <p>
+                Em breve, conteúdos e exercícios práticos para você experimentar diferentes linguagens e desenvolver seus próprios projetos!
+            </p>
+        </section>
+    </main>
+    <footer>
+        &copy; 2025 Ponto de Partida Dev. Todos os direitos reservados.
+    </footer>
 </body>
 </html>
