--- a/progwebmob.html
+++ b/progwebmob.html
@@ -1,29 +1,129 @@
 <!--Página para colocar os cursos--> 
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programação para Web e Mobile</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background: #f0f8ff;
+            color: #222;
+        }
+        header {
+            background: #4fc3f7;
+            padding: 30px 0 10px 0;
+            text-align: center;
+        }
+        header img {
+            width: 180px;
+            border-radius: 12px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+        }
+        header h1 {
+            margin: 18px 0 10px 0;
+            color: #1976d2;
+            font-size: 2em;
+        }
+        main {
+            max-width: 900px;
+            margin: 30px auto;
+            padding: 0 20px;
+        }
+        section {
+            margin-bottom: 40px;
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 12px rgba(0,0,0,0.06);
+            padding: 30px 0;
+            text-align: center;
+        }
+        section img {
+            width: 350px;
+            max-width: 90vw;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            margin-bottom: 18px;
+        }
+        ul {
+            list-style: disc inside;
+            text-align: left;
+            max-width: 600px;
+            margin: 18px auto 24px auto;
+            padding: 0;
+        }
+        ul li {
+            margin-bottom: 12px;
+            font-size: 1.08em;
+        }
+        h2 {
+            color: #1976d2;
+            margin-bottom: 10px;
+        }
+        p {
+            max-width: 700px;
+            margin: 12px auto;
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
+        footer {
+            background: #1976d2;
+            color: #fff;
+            text-align: center;
+            padding: 18px 0;
+            margin-top: 40px;
+            font-size: 1em;
+            letter-spacing: 1px;
+        }
+        @media (max-width: 700px) {
+            main {
+                padding: 0 5px;
+            }
+            section img {
+                width: 95vw;
+            }
+        }
+    </style>
 </head>
-     
 <body>
-    <section style="text-align: center;">
-                <figure>
-                    <img src="./assets/pwm(title).png" alt="imagem de programação web e mobile" width="600" height="400">
-                </figure>
- 
-                <!--Explicão sobre o curso de programação web e mobile-->
-                <p>Este curso aborda os <strong>fundamentos do desenvolvimento para internet e dispositivos móveis</strong>, ensinando desde a criação de sites e aplicações web até a construção de apps otimizados para smartphones.</p>
-                <p>Com foco em performance e boas práticas, você aprenderá a desenvolver projetos eficientes, rápidos e modernos.</p>
-                <p><strong>Conteúdos do curso<strong>:</p>
+    <header>
+        <img src="./assets/logoppd.jpeg" alt="Logo do site Ponto de Partida Dev.">
+        <h1>Programação para Web e Mobile</h1>
+    </header>
+    <main>
+        <section>
+            <figure>
+                <img src="./assets/pwm(title).png" alt="Imagem de Programação Web e Mobile">
+            </figure>
+            <p>
+                Este curso aborda os <strong>fundamentos do desenvolvimento para internet e dispositivos móveis</strong>, ensinando desde a criação de sites e aplicações web até a construção de apps otimizados para smartphones.
+            </p>
+            <p>
+                Com foco em performance e boas práticas, você aprenderá a desenvolver projetos eficientes, rápidos e modernos.
+            </p>
+            <h2>Conteúdos do Curso</h2>
+            <ul>
                 <li><strong>Web Coding</strong>: Criação de sites e sistemas web.</li>
                 <li><strong>Otimização Web</strong>: Técnicas para alta performance na internet.</li>
                 <li><strong>Mobile Coding</strong>: Desenvolvimento de aplicativos para celular.</li>
-                <li><strong>Otimização Mobile</strong>: Práticas para apps leves e rápidos</li>
-                <main>
-
-                </main>
-    </section>
+                <li><strong>Otimização Mobile</strong>: Práticas para apps leves e rápidos.</li>
+            </ul>
+            <p>
+                Com esses conhecimentos, você estará preparado para criar soluções digitais modernas e adaptadas a diferentes plataformas.
+            </p>
+        </section>
+        <section>
+            <h2>Desenvolvimento Prático</h2>
+            <p>
+                Em breve, conteúdos e exercícios práticos para você colocar em ação o que aprendeu e desenvolver seus próprios projetos web e mobile!
+            </p>
+        </section>
+    </main>
+    <footer>
+        &copy; 2025 Ponto de Partida Dev. Todos os direitos reservados.
+    </footer>
 </body>
 </html>
