--- a/index.html
+++ b/index.html
@@ -11,30 +11,64 @@
             background: #f0f8ff;
             color: #222;
         }
-        header {
-            background: #4fc3f7;
-            padding: 30px 0 10px 0;
-            text-align: center;
-            position: relative;
+        /* Barra de navegação fixa */
+        .navbar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            min-width: 320px;
+            max-width: 100vw;
+            background: linear-gradient(90deg, #4fc3f7 0%, #1976d2 100%);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 2vw;
+            height: 64px;
+            z-index: 2000;
+            box-shadow: 0 2px 12px rgba(0,0,0,0.07);
+            box-sizing: border-box;
         }
-        header img {
-            width: 180px;
-            border-radius: 12px;
+        .navbar-logo {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            text-decoration: none;
+        }
+        .navbar-logo img {
+            width: 44px;
+            height: 44px;
+            border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            background: #fff;
         }
-        header p {
-            max-width: 700px;
-            margin: 12px auto;
-            font-size: 1.1em;
-            line-height: 1.6;
+        .navbar-logo span {
+            color: #fff;
+            font-size: 1.25em;
+            font-weight: bold;
+            letter-spacing: 1px;
+        }
+        .navbar-links {
+            display: flex;
+            align-items: center;
+            gap: 18px;
+        }
+        .navbar-link {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1.08em;
+            font-weight: 500;
+            padding: 8px 14px;
+            border-radius: 6px;
+            transition: background 0.18s;
+        }
+        .navbar-link:hover {
+            background: rgba(255,255,255,0.13);
         }
         #header-buttons {
-            position: absolute;
-            top: 24px;
-            right: 32px;
             display: flex;
             gap: 12px;
-            z-index: 10;
+            align-items: center;
         }
         .header-btn {
             padding: 8px 22px;
@@ -171,7 +205,7 @@
             width: 100vw;
             height: 100vh;
             background: rgba(0,0,0,0.35);
-            z-index: 1000;
+            z-index: 3000;
             justify-content: center;
             align-items: center;
         }
@@ -185,31 +219,96 @@
             color: #1976d2;
             cursor: pointer;
         }
-        @media (max-width: 700px) {
-            .courses {
+        /* Dropdown perfil */
+        #user-profile-area {
+            display: none;
+            align-items: center;
+            gap: 10px;
+            position: relative;
+        }
+        #profile-dropdown {
+            display: none;
+            position: absolute;
+            top: 48px;
+            right: 0;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 12px rgba(0,0,0,0.13);
+            padding: 10px 0;
+            min-width: 140px;
+            z-index: 1001;
+        }
+        #logout-btn {
+            background: none;
+            border: none;
+            width: 100%;
+            text-align: left;
+            padding: 10px 18px;
+            font-size: 1em;
+            color: #1976d2;
+            cursor: pointer;
+        }
+        @media (max-width: 900px) {
+            .navbar {
                 flex-direction: column;
-                align-items: center;
+                align-items: flex-start;
+                height: auto;
+                padding: 8px 0 8px 0;
             }
-            .courses img {
-                width: 95vw;
-                height: 180px;
+            .navbar-links {
+                margin-top: 8px;
+                gap: 10px;
             }
-            main {
-                padding: 0 5px;
+        }
+        @media (max-width: 700px) {
+            .navbar {
+                padding: 0 2vw;
+            }
+            .navbar-logo span {
+                display: none;
             }
             .register-form {
                 width: 98vw;
                 padding: 0 5vw 28px 5vw;
             }
-            #header-buttons {
-                top: 10px;
-                right: 10px;
-            }
+        }
+        /* Espaço para compensar a barra fixa */
+        .navbar-space {
+            height: 64px;
         }
     </style>
 </head>
 <body>
-    <header style="position:relative;">
+    <!-- Barra de navegação fixa -->
+    <nav class="navbar">
+        <a href="index.html" class="navbar-logo">
+            <img src="./assets/logoppd.jpeg" alt="Logo do site Ponto de Partida Dev.">
+            <span>Ponto de Partida Dev</span>
+        </a>
+        <div class="navbar-links">
+            <a href="index.html" class="navbar-link">Início</a>
+            <a href="FLM.html" class="navbar-link">Fundamentos Lógicos</a>
+            <a href="progwebmob.html" class="navbar-link">Web & Mobile</a>
+            <a href="sistemas.html" class="navbar-link">Infraestrutura</a>
+            <a href="lingprogramação.html" class="navbar-link">Linguagens</a>
+            <a href="instalVscode.html" class="navbar-link">Instalar VS Code</a>
+        </div>
+        <div id="header-buttons">
+            <button id="open-login-modal" class="header-btn">Login</button>
+            <button id="open-register-modal" class="header-btn">Cadastro</button>
+            <div id="user-profile-area">
+                <button id="user-profile-btn" class="header-btn" style="display:flex;align-items:center;gap:8px;padding:8px 18px;">
+                    <span id="user-profile-icon" style="font-size:1.2em;">👤</span>
+                    <span id="user-profile-name"></span>
+                </button>
+                <div id="profile-dropdown">
+                    <button id="logout-btn">Sair</button>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="navbar-space"></div>
+    <header style="text-align:center;">
         <figure>
             <img src="./assets/logoppd.jpeg" alt="Logo do site Ponto de Partida Dev.">
         </figure>
@@ -217,19 +316,6 @@
             <strong>Ponto de Partida Dev</strong> ajuda iniciantes em programação com cursos, 
             trilhas e suporte gratuito. Comece do zero e aprenda de forma simples!
         </p>
-        <div id="header-buttons" style="position:absolute;top:24px;right:32px;display:flex;gap:12px;z-index:10;">
-            <button id="open-login-modal" class="header-btn">Login</button>
-            <button id="open-register-modal" class="header-btn">Cadastro</button>
-            <div id="user-profile-area" style="display:none;align-items:center;gap:10px;">
-                <button id="user-profile-btn" class="header-btn" style="display:flex;align-items:center;gap:8px;padding:8px 18px;">
-                    <span id="user-profile-icon" style="font-size:1.2em;">👤</span>
-                    <span id="user-profile-name"></span>
-                </button>
-                <div id="profile-dropdown" style="display:none;position:absolute;top:48px;right:0;background:#fff;border-radius:8px;box-shadow:0 2px 12px rgba(0,0,0,0.13);padding:10px 0;min-width:140px;z-index:1001;">
-                    <button id="logout-btn" style="background:none;border:none;width:100%;text-align:left;padding:10px 18px;font-size:1em;color:#1976d2;cursor:pointer;">Sair</button>
-                </div>
-            </div>
-        </div>
     </header>
     <main>
         <section style="text-align: center;">
